--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -1,48 +1,31 @@
 .wrapper {
-  max-width: 45%;
+  width: 60%;
   display: flex;
-  gap: 24px;
   flex-direction: column;
+  gap: 34px;
   align-items: flex-start;
   margin: auto;
   padding-top: 88px;
   padding-bottom: 182px;
+
+  h3 {
+    padding-bottom: 20px;
+  }
 }
 
 @media screen and (max-width: 600px) {
   .wrapper {
-    max-width: 100%;
-    display: flex;
-    gap: 24px;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: auto;
-    padding-top: 88px;
-    padding-bottom: 102px;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 601px) {
+  .wrapper {
+    width: 90%;
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 1001px) {
   .wrapper {
-    max-width: 90%;
-  }
-}
-
-@media screen and (min-width: 900px) {
-  .wrapper {
-    max-width: 80%;
-    display: flex;
-    gap: 24px;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: auto;
-    padding-top: 88px;
-    padding-bottom: 182px;
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  .wrapper {
-    max-width: 50%;
+    width: 60%;
   }
 }
