--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -20,6 +20,12 @@
         display: flex;
         align-self: center;
         grid-column: span 2;
+        width: 159px;
+        height: 25px;
+        cursor: pointer;
+        img {
+          width: 100%;
+        }
       }
 
       .desktop_links {
@@ -31,6 +37,18 @@
 
         a {
           color: var(--eerie-black);
+          position: relative;
+        }
+
+        .active {
+          &::before {
+            content: " ";
+            position: absolute;
+            height: 2px;
+            background-color: var(--eerie-black);
+            width: 100%;
+            bottom: -25px;
+          }
         }
 
         .how_droply_works {
@@ -153,7 +171,18 @@
           top: 0;
 
           .logo {
-            cursor: pointer;
+            .logo {
+              display: flex;
+              align-self: center;
+              grid-column: span 2;
+              width: 159px;
+              height: 25px;
+              cursor: pointer;
+
+              img {
+                width: 100%;
+              }
+            }
           }
           .button_and_controls {
             display: flex;
@@ -221,6 +250,7 @@
           height: 100vh;
           background-color: var(--very-pale-orange);
           display: none;
+          overflow-y: scroll;
 
           .mobile_links {
             display: flex;
@@ -229,10 +259,62 @@
             a {
               color: var(--eerie-black);
             }
+
             .how_droply_works {
               display: flex;
               align-items: center;
-              gap: 10px;
+              gap: 8px;
+            }
+
+            .dropdown {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              position: absolute;
+              background-color: white;
+              padding: 12px;
+              padding-left: 0;
+              padding-right: 0;
+              border-radius: 8px;
+              top: 80px;
+              margin-left: 20px;
+              box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+              display: none;
+
+              a {
+                padding: 6px;
+                padding-inline: 24px;
+                padding-top: 12px;
+
+                &:hover {
+                  background-color: rgba(#000, $alpha: 0.1);
+                }
+              }
+            }
+            .dropdown_visible {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              position: absolute;
+              background-color: white;
+              padding: 12px;
+              padding-left: 0;
+              padding-right: 0;
+              border-radius: 8px;
+              top: 80px;
+              margin-left: 20px;
+              box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+
+              a {
+                padding: 6px;
+                padding-inline: 24px;
+                padding-top: 12px;
+
+                &:hover {
+                  background-color: rgba(#000, $alpha: 0.1);
+                }
+              }
             }
           }
 
@@ -256,31 +338,49 @@
           height: 100vh;
           background-color: var(--very-pale-orange);
           z-index: 999;
+          overflow-y: scroll;
+          scroll-behavior: smooth;
+          padding-bottom: 200px;
 
           .mobile_links {
             display: flex;
             flex-direction: column;
-            gap: 30px;
+            gap: 25px;
             a {
               color: var(--eerie-black);
             }
+
             .how_droply_works {
               display: flex;
               align-items: center;
-              gap: 10px;
+              gap: 8px;
             }
           }
 
           .buttons {
             display: flex;
-            gap: 30px;
+            flex-direction: column;
+            gap: 20px;
+
+            .mobile_blue_button {
+              width: 200px;
+              height: 40px;
+              background-color: var(--palatinate-blue);
+              color: white;
+            }
+            .mobile_black_button {
+              width: 200px;
+              height: 40px;
+              background-color: var(--eerie-black);
+              color: white;
+            }
           }
         }
       }
     }
   }
 }
-@media screen and (min-width: 601px) and (max-width: 1180px) {
+@media screen and (min-width: 601px) and (max-width: 1050px) {
   .wrapper {
     height: 70px;
     background-color: white;
@@ -326,9 +426,16 @@
           top: 0;
 
           .logo {
-            cursor: pointer;
             display: flex;
             align-self: center;
+            grid-column: span 2;
+            width: 159px;
+            height: 25px;
+            cursor: pointer;
+
+            img {
+              width: 100%;
+            }
           }
           .button_and_controls {
             display: flex;
