feat(merchant hero): add background to the image

--- a/src/components/IndividualHero/IndividualHero.module.scss
+++ b/src/components/IndividualHero/IndividualHero.module.scss
@@ -5,6 +5,7 @@
   gap: 50px;
   margin-bottom: 0px;
   height: 100vh;
+ 
 
   .container {
     display: flex;
@@ -31,7 +32,7 @@
     position: absolute;
     right: 0;
     top: 70px;
-    background-color: var(--dark-blue);
+    background-color: rgb(14, 44, 14);
   }
 }
 @media screen and (max-width: 750px) {
