feat(navbar): padded the dropdown

--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -69,8 +69,8 @@
           position: absolute;
           background-color: white;
           padding: 12px;
-          padding-left: 0;
-          padding-right: 0;
+          padding-left: 12px;
+          padding-right: 12px;
           border-radius: 8px;
           top: 80px;
           margin-left: 20px;
@@ -94,8 +94,8 @@
           position: absolute;
           background-color: white;
           padding: 12px;
-          padding-left: 0;
-          padding-right: 0;
+          padding-left: 12px;
+          padding-right: 12px;
           border-radius: 8px;
           top: 80px;
           margin-left: 20px;
