--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -69,8 +69,8 @@
           position: absolute;
           background-color: white;
           padding: 12px;
-          padding-left: 12px;
-          padding-right: 12px;
+          padding-left: 0;
+          padding-right: 0;
           border-radius: 8px;
           top: 80px;
           margin-left: 20px;
@@ -79,7 +79,7 @@
 
           a {
             padding: 6px;
-            padding-inline: 24px;
+            padding-inline: 36px;
             padding-top: 12px;
 
             &:hover {
