--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -73,13 +73,14 @@
           padding-right: 0;
           border-radius: 8px;
           top: 80px;
-          
+
           box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
           display: none;
 
           a {
             padding: 6px;
-            padding-inline: 36px;
+            padding-left: 36px;
+            padding-right: 36px;
             padding-top: 12px;
 
             &:hover {
@@ -98,12 +99,13 @@
           padding-right: 0;
           border-radius: 8px;
           top: 80px;
-         
+
           box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 
           a {
             padding: 6px;
-            padding-inline: 36px;
+            padding-left: 36px;
+            padding-right: 36px;
             padding-top: 12px;
 
             &:hover {
