--- a/src/components/contactForm/ContactForm.module.scss
+++ b/src/components/contactForm/ContactForm.module.scss
@@ -48,6 +48,7 @@
         justify-self: flex-end;
         align-items: center;
         gap: 21px;
+        width: 100%;
 
         .name,
         .phone_number {
@@ -58,77 +59,85 @@
   }
 }
 
-@media screen and (max-width: 600px) {
-  .wrapper {
-    grid-gap: 30px;
-    .locations {
-      grid-column: span 12;
-    }
-    .getintouch {
-      grid-column: span 12;
-
-      form {
-        .name_phone_number {
-          flex-direction: column;
-        }
-      }
-    }
-  }
-}
-@media screen and (min-width: 601px) {
+@media screen and (max-width: 700px) {
   .wrapper {
     max-width: 100%;
-    padding-top: 80px;
-    grid-gap: 20px;
+    margin: auto;
+    grid-gap: 15px;
     .locations {
       grid-column: span 12;
-      max-width: 90%;
-      margin: auto;
+      width: 100%;
     }
     .getintouch {
       grid-column: span 12;
-      padding-inline: 22px;
-      max-width: 90%;
-      margin: auto;
 
       form {
+        display: flex;
+        flex-direction: column;
+        gap: 28px;
+        width: 100%;
+
         .name_phone_number {
-          display: flex;
-          flex-direction: row;
+          flex-direction: column;
+          gap: 21px;
           width: 100%;
         }
       }
     }
   }
 }
-@media screen and (min-width: 1001px) {
+
+@media screen and (min-width: 701px) {
   .wrapper {
-    grid-gap: 0px;
-    place-items: flex-start;
-    place-content: flex-start;
-    justify-content: start;
-    justify-items: start;
+    max-width: 90%;
+    margin: auto;
+
     .locations {
       grid-column: span 5;
-      max-width: 80%;
+      width: 100%;
     }
     .getintouch {
       grid-column: span 7;
+
+      form {
+        display: flex;
+        flex-direction: column;
+        gap: 28px;
+        width: 100%;
+
+        .name_phone_number {
+          flex-direction: column;
+          gap: 21px;
+          width: 100%;
+        }
+      }
     }
   }
 }
-
-@media screen and (min-width: 1201px) {
+@media screen and (min-width: 1150px) {
   .wrapper {
     max-width: 80%;
-    grid-gap: 30px;
-    height: 100%;
+    margin: auto;
 
     .locations {
-      max-width: 100%;
+      grid-column: span 5;
+      width: 100%;
     }
     .getintouch {
-      max-width: 100%;
+      grid-column: span 7;
+
+      form {
+        display: flex;
+        flex-direction: column;
+        gap: 28px;
+        width: 100%;
+
+        .name_phone_number {
+          flex-direction: row;
+          gap: 21px;
+          width: 100%;
+        }
+      }
     }
   }
 }
