linked the buttons

--- a/src/components/IndividualHero/IndividualHero.module.scss
+++ b/src/components/IndividualHero/IndividualHero.module.scss
@@ -81,6 +81,7 @@
       height: 100%;
       grid-column: span 6;
       max-width: 100%;
+      width: 50%;
 
       .text_div {
         margin: auto;
