--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -65,7 +65,6 @@ label {
 a {
   text-decoration: none;
   transition: all 0.1s ease-in;
-  width: max-content;
 }
 
 a:hover {
@@ -81,6 +80,7 @@ input {
   font-size: 0.8rem;
 }
 
-input:focus, textarea:focus {
+input:focus,
+textarea:focus {
   border: 1px solid black;
 }
