--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,7 +13,7 @@
 
 body {
   font-size: 1rem;
-  font-family: "RobotoRegular";
+  font-family: "RobotoRegular", sans-serif;
   color: var(--eerie-black);
   background-color: var(--pampas);
 }
