--- a/src/mini_components/faq/Faq.module.scss
+++ b/src/mini_components/faq/Faq.module.scss
@@ -20,9 +20,23 @@
 
   .answer {
     display: flex;
+    flex-direction: column;
+    gap: 20px;
     align-self: flex-start;
     transition: all 0.3s ease-in-out;
     padding-bottom: 10px;
     text-align: left;
+
+    .first,
+    .second {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      ul {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
   }
 }
