--- a/src/components/IndividualHero/IndividualHero.module.scss
+++ b/src/components/IndividualHero/IndividualHero.module.scss
@@ -78,6 +78,7 @@
       display: flex;
       height: 100%;
       grid-column: span 6;
+      width: 100%;
       .text_div {
         margin: auto;
         .hero_text {
