add !important to the grid items in contactForm

--- a/src/components/contactForm/ContactForm.module.scss
+++ b/src/components/contactForm/ContactForm.module.scss
@@ -124,11 +124,11 @@
     margin: auto;
 
     .locations {
-      grid-column: span 5;
+      grid-column: span 5 !important;
       width: auto;
     }
     .getintouch {
-      grid-column: span 7;
+      grid-column: span 7 !important;
 
       form {
         display: flex;
