--- a/src/components/IndividualHero/IndividualHero.module.scss
+++ b/src/components/IndividualHero/IndividualHero.module.scss
@@ -70,15 +70,14 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     place-items: center;
-    grid-gap: 30px;
+    grid-gap: 0px;
     margin-bottom: 0px;
-    height: 100vh;
 
     .container {
       display: flex;
       height: 100%;
-      grid-column: span 6;
-      width: 100%;
+      grid-column: span 6 !important;
+      position: relative;
       .text_div {
         margin: auto;
         .hero_text {
@@ -92,7 +91,7 @@
 
     .barcode {
       grid-column: span 5;
-      width: 48.8%;
+      width: 48%;
       height: 100vh;
       object-fit: cover;
       position: absolute;
