--- a/src/components/contactForm/ContactForm.module.scss
+++ b/src/components/contactForm/ContactForm.module.scss
@@ -122,14 +122,12 @@
   .wrapper {
     max-width: 100%;
     margin: auto;
+    display: flex;
 
     .locations {
-      grid-column: span 5 !important;
-      width: auto;
+      width: 50%;
     }
     .getintouch {
-      grid-column: span 7 !important;
-
       form {
         display: flex;
         flex-direction: column;
@@ -151,16 +149,15 @@
 }
 @media screen and (min-width: 1150px) {
   .wrapper {
+    display: flex;
+    align-self: center;
+    justify-self: center;
     max-width: 80%;
     margin: auto;
-
     .locations {
-      grid-column: span 5;
-      width: auto;
+      width: 40%;
     }
     .getintouch {
-      grid-column: span 7;
-
       form {
         display: flex;
         flex-direction: column;
